objects/Account_Insight__c.object
<CustomObject>
    <description>Master Object which groups related Articles with an Account</description>
    <fields>
        <fullName>Annual_Revenue_Big__c</fullName>
        <label>Annual Revenue Big</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_Small__c</fullName>
        <label>Annual Revenue Small</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_Big__c</fullName>
        <label>Employees Big</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_Small__c</fullName>
        <label>Employees Small</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Income__c</fullName>
        <label>Net Income</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Insights</relationshipLabel>
        <relationshipName>Account_Insights</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Insight</label>
    <nameField>
        <label>Account Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>